<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="gender"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_biological_gender"
        android:summaryOn="@string/male"
        android:summaryOff="@string/female" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference

        android:defaultValue="@string/pref_default_weight"
        android:inputType="number"
        android:key="weight"

        android:selectAllOnFocus="true"

        android:title="@string/pref_weight"
        android:numeric="integer"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_height"
        android:selectAllOnFocus="true"
        android:title="@string/pref_height"
        android:key="height"
        android:inputType="number"
        android:numeric="integer"/>
    <!--<ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
