<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lawriecate.apps.nutrifit.HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:id="@+id/settings_button" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                android:id="@+id/faq_button" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking"
                android:id="@+id/ranking_button" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_message"
                android:id="@+id/sign_out_button" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:id="@+id/progress_text" />

        <TextView
            android:text="Level 1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="80sp"
            android:textAlignment="center"
            android:fontFamily="casual" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentpoints"
            android:id="@+id/text_points"
            tools:text="1000pts"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="36sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/challenges"
                    android:id="@+id/textView3" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView2"
                        android:src="@drawable/fitness"
                        android:padding="2dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activity_fit_challenge"
                        android:id="@+id/fitness_challenge_button" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView"
                        android:src="@drawable/apple"
                        android:padding="2dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activity_food_challenge"
                        android:id="@+id/food_challenge_button"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_calculator"
                        android:padding="2dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_sugar_calculator"
                        android:id="@+id/sugar_calc_button"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tools"
                    android:id="@+id/textView3" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_map"
                        android:padding="2dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_fitness_map"
                        android:id="@+id/show_map_button"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imageViewVr"
                        android:src="@drawable/ic_map"
                        android:padding="2dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_vr_challenge"
                        android:id="@+id/show_vr"
                        />
                </LinearLayout>

                <TextView
                    android:text="Level (for demonstration purposes only)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9" />

                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="2"
                    android:progress="0"
                    android:id="@+id/levelSeekBar"
                    android:layout_weight="1" />
            </LinearLayout>


        </ScrollView>


    </LinearLayout>
</RelativeLayout>
